2015-08-22  Antti Koivisto  <antti@apple.com>

        Decode data URLs in web process
        https://bugs.webkit.org/show_bug.cgi?id=148128

        Reviewed by Darin Adler.

        * WebProcess/Network/WebResourceLoadScheduler.cpp:
        (WebKit::WebResourceLoadScheduler::scheduleLoad):

            Don't send data: loads to the network process, handle them locally.

        (WebKit::WebResourceLoadScheduler::startLocalLoad):

            Call ResourceLoder::start() directly.

2015-08-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.9.91 release.

        * gtk/NEWS: Add release notes for 2.9.91.

2015-08-21  Chris Dumez  <cdumez@apple.com>

        Regression(r188698): http/tests/cache/disk-cache/disk-cache-revalidation-new-expire-header.html is very flaky
        https://bugs.webkit.org/show_bug.cgi?id=148205

        Reviewed by Antti Koivisto.

        After r188640, successful revalidation of resources in the memory cache
        would cause us to drop the corresponding resource in the disk cache.
        This patch addresses the issue by not removing the cache entry if the
        response is a successful revalidation (i.e. status code == 304).

        Longer term, we should probably update the entry in the disk cache (if
        it exists) when it is revalidated by the memory cache. Currently,
        revalidation by the memory cache bypasses the disk cache and goes
        straight to the network. Then, when the response comes back as a 304,
        we try and store the response in the cache. However, a 304 status code
        is not cacheable so the cache rejects it.

        * NetworkProcess/cache/NetworkCache.cpp:
        (WebKit::NetworkCache::Cache::store):

2015-08-19  Chris Dumez  <cdumez@apple.com>

        WebKit may keep outdated entry in the disk cache after a reload
        https://bugs.webkit.org/show_bug.cgi?id=148137
        <rdar://problem/22299547>
