@@ -33,6 +33,7 @@
 #include <WebCore/GLContext.h>
 #include <WebCore/IntSize.h>
 #include <WebCore/TransformationMatrix.h>
+#include <wtf/Condition.h>
 #include <wtf/FastMalloc.h>
 #include <wtf/Noncopyable.h>
 #include <wtf/ThreadSafeRefCounted.h>
@@ -110,9 +111,9 @@ private:
     std::unique_ptr<CompositingRunLoop> m_compositingRunLoop;
 
     ThreadIdentifier m_threadIdentifier;
-    ThreadCondition m_initializeRunLoopCondition;
+    Condition m_initializeRunLoopCondition;
     Lock m_initializeRunLoopConditionMutex;
-    ThreadCondition m_terminateRunLoopCondition;
+    Condition m_terminateRunLoopCondition;
     Lock m_terminateRunLoopConditionMutex;
 };
 
